--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         depends_on: 
             - mysql
         ports:
-            - "5000:5000"
+            - "5000:4300"
     mysql:
         image: mariadb:10.1.38
         command: --default-authentication-plugin=mysql_native_password
@@ -19,6 +19,8 @@ services:
     
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
+        ports: 
+            - "8081:80"
         env_file:
             - .env
         depends_on:
