--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             - mysql
         depends_on: 
             - mysql
+        env_file:
+            - .env
         ports:
             - "5000:4300"
     mysql:
